--- a/freshfarm/shop-item/couve.html
+++ b/freshfarm/shop-item/couve.html
@@ -45,7 +45,7 @@
                     <HR >
                     <div class="fs-5 mb-5" >
                         <font size=+4 ><span class="badge rounded-pill bg-success" >0.35€</span> </font>
-                        <label for="tentacles">Quantidade (0-150):</label>
+                        <label for="tentacles">Quantidade:</label>
                         <input type="number" id="tentacles" name="tentacles" min="0" max="150">
                         <button class="btn btn-outline-dark flex-shrink-0" type="button">
                             <i class="bi-cart-fill me-1"></i>
