--- a/freshfarm/shop-item/batatas.html
+++ b/freshfarm/shop-item/batatas.html
@@ -62,7 +62,7 @@
                         <font size=+2 ><span class="badge rounded-pill bg-success" >Vegetariano</span></font>
                     <HR >
                         <p><font size=+2>Informações do produto:</font></p>
-                        <p><font size=+1>Tipo de alimento:</font> Ceriais, pães e Tubérculos</p>
+                        <p><font size=+1>Tipo de alimento:</font> Cereais, pães e Tubérculos</p>
                         <p><font size=+1>Época de produção:</font> Abril a Dezembro</p>
                         <p><font size=+1>Fornecido por:</font> Fornecedor 1</p>
                         
