--- a/freshfarm/shop-item/cenoura.html
+++ b/freshfarm/shop-item/cenoura.html
@@ -63,7 +63,7 @@
 
                     <HR >
                         <p><font size=+2>Informações do produto:</font></p>
-                        <p><font size=+1>Tipo de alimento:</font> Ceriais, pães e Tubérculos</p>
+                        <p><font size=+1>Tipo de alimento:</font> Cereais, pães e Tubérculos</p>
                         <p><font size=+1>Época de produção:</font> Todo o ano exceto Maio</p>
                         <p><font size=+1>Fornecido por:</font> Fornecedor 1</p>
                     <div class="d-flex">
