--- a/freshfarm/homepage/index.html
+++ b/freshfarm/homepage/index.html
@@ -292,7 +292,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-          <button type="button" class="btn btn-info rounded-pill text-white" href="/freshfarm/payment/pagamento.html">Finalizar Compras</button>
+          <a href="../payment/pagamento.html"><button type="button" class="btn btn-info rounded-pill text-white">Finalizar Compras</button>
         </div>
       </div>
     </div>
