--- a/freshfarm/homepage/index.html
+++ b/freshfarm/homepage/index.html
@@ -292,7 +292,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-          <a id="FINA" href=""><button type="button" disabled class="btn btn-primary rounded-pill text-white">Finalizar Compras</button></a>
+          <a id="FINA" href="../payment/pagamento.html"><button type="button" disabled class="btn btn-primary rounded-pill text-white">Finalizar Compras</button></a>
         </div>
       </div>
     </div>
