--- a/freshfarm/payment/cartao.html
+++ b/freshfarm/payment/cartao.html
@@ -83,9 +83,7 @@
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center align-items-center">
                     <div class="col-4 mb-5 text-center">
-                        <button type="button" class="btn btn-primary">
-                            <h3>Efetuar compra</h3>
-                          </button>
+                        <a href="embalagem.html"><button type="button" class="btn btn-primary"><h3>Efetuar compra</h3></button></a>
                     </div>
                 </div>
             </div>
