--- a/freshfarm/payment/embalagem.html
+++ b/freshfarm/payment/embalagem.html
@@ -67,9 +67,15 @@
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Tradicional (Biodegradavel)
+                          Cabaz Tradicional
                         </label>
                       </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                        <label class="form-check-label" for="flexRadioDefault2">
+                          Saco de pano
+                        </label>
+                    </div>
                     </div>
                     <div class="row gx-4 gx-lg-5 justify-content-center align-items-center" style="margin-top: 50px;">
                         <div class="col-6 mb-5 text-center">
