validação de dados
Sistema de validação de dados inseridos no meio de pagamento feito.

--- a/freshfarm/payment/cartao.html
+++ b/freshfarm/payment/cartao.html
@@ -61,7 +61,10 @@
                     <div class="col-4 mb-2 text-center">
                         <div class="input-group mb-3">
                             <span class="input-group-text bg-success text-white" id="basic-addon1">Número</span>
-                            <input type="text" class="form-control" placeholder="0000 0000 0000 0000" aria-label="Telemóvel" aria-describedby="basic-addon1">
+                            <input id="NUM" type="text" class="form-control" placeholder="0000 0000 0000 0000" aria-label="Número" aria-describedby="basic-addon1">
+                          </div>
+                          <div class="text-danger d-none">
+                            <i class="fas fa-exclamation-triangle"></i> Erro! Campo de preenchimento contém letras ou número de caracteres é inválido !
                           </div>
                     </div>
                 </div>
@@ -69,7 +72,10 @@
                     <div class="col-4 mb-2 text-center">
                         <div class="input-group mb-3">
                             <span class="input-group-text bg-success text-white" id="basic-addon1">Validade</span>
-                            <input type="text" class="form-control" placeholder="MM/AAAA" aria-label="Telemóvel" aria-describedby="basic-addon1">
+                            <input id="VAL" type="text" class="form-control" placeholder="MM/AAAA" aria-label="Validade" aria-describedby="basic-addon1">
+                          </div>
+                          <div class="text-danger d-none">
+                            <i class="fas fa-exclamation-triangle"></i> Erro! Data inválida !
                           </div>
                     </div>
                 </div>
@@ -77,13 +83,16 @@
                     <div class="col-4 mb-2 text-center">
                         <div class="input-group mb-3">
                             <span class="input-group-text bg-success text-white" id="basic-addon1">CVV</span>
-                            <input type="text" class="form-control" placeholder="3 a 4 dígitos (máx)" aria-label="Telemóvel" aria-describedby="basic-addon1">
+                            <input id="CVV" type="text" class="form-control" placeholder="3 a 4 dígitos (máx)" aria-label="CVV" aria-describedby="basic-addon1">
+                          </div>
+                          <div class="text-danger d-none">
+                            <i class="fas fa-exclamation-triangle"></i> Erro! Número de digitos nulo ou excede 4!
                           </div>
                     </div>
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center align-items-center">
                     <div class="col-4 mb-5 text-center">
-                        <a href="embalagem.html"><button type="button" class="btn btn-primary"><h3>Efetuar compra</h3></button></a>
+                        <button type="button" class="btn btn-primary SUBBTN"><h3>Efetuar compra</h3></button>
                     </div>
                 </div>
             </div>
@@ -100,6 +109,49 @@
 			  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 			  crossorigin="anonymous"></script>
         <!-- Jquery -->
-        
+        <script>
+            $(document).ready(function(){
+                function checkStrin(B)
+            {
+                if(B.match(/^[0-9]+$/) != null)
+                {
+                    return true;
+                }
+                else
+                {
+                    return false;
+                }
+            }
+                $("body").on('click','.SUBBTN',function(){
+                    console.log("i")
+                    var errorLst = $(".text-danger")
+                    var retVal = true;
+                    var nuM = $("#NUM").val().trim().replaceAll(" ","");
+                    var vaL = $("#VAL").val().trim().split("/");
+                    var cVV = $("#CVV").val().trim();
+                    if (checkStrin(nuM) === false) {
+                        retVal = false;
+                        $(errorLst).eq(0).removeClass("d-none");
+                    } else {
+                        $(errorLst).eq(0).addClass("d-none");
+                    }
+                    if (vaL.length == 2 && ("01" <= vaL[0] && vaL[0] <= "12") && vaL[1].length == 4 && checkStrin(vaL[0]) && checkStrin(vaL[1])) {
+                        $(errorLst).eq(1).addClass("d-none");
+                    } else {
+                        retVal = false;
+                        $(errorLst).eq(1).removeClass("d-none");
+                    }
+                    if (cVV.length > 4 || cVV.length < 1) {
+                        retVal = false;
+                        $(errorLst).eq(2).removeClass("d-none");
+                    } else {
+                        $(errorLst).eq(2).addClass("d-none");
+                    }
+                    if (retVal == true) {
+                        window.location = "embalagem.html";
+                    }
+                });
+            });
+        </script>
     </body>
 </html>
