processo pagamento feito

--- a/freshfarm/payment/Transporte.html
+++ b/freshfarm/payment/Transporte.html
@@ -39,58 +39,43 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Pagamento Finalizado</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Embalagem</p>
+                    <h1 class="display-4 fw-bolder">Transporte</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">Tem a possibilidade de escolher o seu tipo de veiculo de transporte</p>
                 </div>
             </div>
         </header>
         <!-- Section-->
         <section class="py-1">
             <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center align-items-center" style="margin-top: 20px;">
-                    <div class="col-6 mb-5 text-center">
-                        <h1><span class="badge rounded-pill bg-success text-white">Como deseja receber os seus produtos?</span></h1>
+                <div class="row gx-4 gx-lg-5 align-items-center" style="margin-top: 20px;">
+                    <div class="text-center">
+                        <h1><span class="badge rounded-pill bg-success text-white">Que veiculo de transporte deseja que lhe leve a sua encomenda?</span></h1>
                     </div>
                 </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center align-items-center">
-                    <div class="col-6 mb-5 text-center">
-                        <h3><span class="badge bg-dark text-white">Embalagem</span></h3>
-                    </div>
-                </div>
-                <div style="margin-left: 45%;">
+                <div style="margin-left: 45%; margin-top: 40px;">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
                         <label class="form-check-label" for="flexRadioDefault1">
-                          Plástico
+                          Eletrico
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Cabaz Tradicional
+                          Hibrido
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Saco de pano
+                          Combustivel Fossil
                         </label>
-                    </div>
-                    <div class="row gx-4 gx-lg-5 justify-content-center align-items-center" style="margin-top: 50px;">
-                        <div class="col-6 mb-5 text-center">
-                            <h3><span class="badge bg-dark text-white">Entrega</span></h3>
-                        </div>
                     </div>
                 </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center align-items-center">
+                <div class="row gx-4 gx-lg-5 justify-content-center align-items-center" style="margin-top: 50px;">
                     <div class="col-4 mb-5 text-center">
-                        <a href="Transporte.html"><button type="button" class="btn btn-primary">
-                            <h3>Colocar Encomenda</h3>
-                        </button></a>
-                    </div>
-                    <div class="col-4 mb-5 text-center">
-                        <a href="mercearia.html"><button type="button" class="btn btn-primary">
-                            <h3>Recolher na mercearia</h3>
+                        <a href="local.html"><button type="button" class="btn btn-primary">
+                            <h3>Avançar</h3>
                         </button></a>
                     </div>
                 </div>
