--- a/freshfarm/payment/local.html
+++ b/freshfarm/payment/local.html
@@ -39,8 +39,8 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Pagamento Finalizado</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">Embalagem</p>
+                    <h1 class="display-4 fw-bolder">Local</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">Coloque a Encomenda</p>
                 </div>
             </div>
         </header>
@@ -49,48 +49,21 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center align-items-center" style="margin-top: 20px;">
                     <div class="col-6 mb-5 text-center">
-                        <h1><span class="badge rounded-pill bg-success text-white">Como deseja receber os seus produtos?</span></h1>
+                        <h1><span class="badge rounded-pill bg-success text-white">Como deseja receber a sua encomenda?</span></h1>
                     </div>
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center align-items-center">
-                    <div class="col-6 mb-5 text-center">
-                        <h3><span class="badge bg-dark text-white">Embalagem</span></h3>
-                    </div>
-                </div>
-                <div style="margin-left: 45%;">
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
-                        <label class="form-check-label" for="flexRadioDefault1">
-                          Plástico
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                        <label class="form-check-label" for="flexRadioDefault2">
-                          Cabaz Tradicional
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                        <label class="form-check-label" for="flexRadioDefault2">
-                          Saco de pano
-                        </label>
-                    </div>
-                    <div class="row gx-4 gx-lg-5 justify-content-center align-items-center" style="margin-top: 50px;">
-                        <div class="col-6 mb-5 text-center">
-                            <h3><span class="badge bg-dark text-white">Entrega</span></h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center align-items-center">
-                    <div class="col-4 mb-5 text-center">
-                        <a href="Transporte.html"><button type="button" class="btn btn-primary">
-                            <h3>Colocar Encomenda</h3>
+                    <div class="col-3 mb-5 text-center">
+                        <a href="morada.html"><button type="button" class="btn btn-primary">
+                            <h3>Domicilio</h3>
                         </button></a>
                     </div>
+                    <div class="col-1 mb-5 text-center">
+                        <h1><span class="badge rounded-pill text-dark">ou</span></h1>
+                    </div>
                     <div class="col-4 mb-5 text-center">
-                        <a href="mercearia.html"><button type="button" class="btn btn-primary">
-                            <h3>Recolher na mercearia</h3>
+                        <a href="ponto recolha.html"><button type="button" class="btn btn-primary">
+                            <h3>Ponto de Recolha</h3>
                         </button></a>
                     </div>
                 </div>
