--- a/freshfarm/payment/ponto recolha.html
+++ b/freshfarm/payment/ponto recolha.html
@@ -52,13 +52,13 @@
                         <h1><span class="badge rounded-pill bg-success text-white">Indique um ponto de recolha</span></h1>
                     </div>
                 </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center align-items-center" style="margin-top: 20px;">
-                    <div class="col-6 mb-5 text-center">
-                        <img src="aveiro.png" alt="Aveiro" height=100px>
+                <div>
+                    <div class="justify-content-center d-flex align-items-center">
+                        <img src="../payment/img/aveiro.png" alt="Aveiro" height=600px>
                     </div>
                 </div>
                 <div style="margin-left: 40%;">
-                    <div class="form-check">
+                    <div class="form-check"  style="margin-top: 50px;">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
                         <label class="form-check-label" for="flexRadioDefault1">
                           1) Rua Carlos dos Santos nº10
