--- a/freshfarm/payment/fim.html
+++ b/freshfarm/payment/fim.html
@@ -54,9 +54,11 @@
                 </div>
                 <div class="row gx-4 gx-lg-5 justify-content-center align-items-center">
                     <div class="col-4 mb-5 text-center">
+                        <a href="encomenda.html">
                         <button type="button" class="btn btn-primary">
                             <h3>Ver Encomenda</h3>
                           </button>
+                        </a>
                     </div>
                 </div>
             </div>
