--- a/freshfarm/payment/encomenda.html
+++ b/freshfarm/payment/encomenda.html
@@ -22,16 +22,21 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="../homepage/index.html"><i class="fas fa-home"></i> Home</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="../homepage/index.html"><i class="fas fa-home"></i> Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="../payment/pagamento.html"> <i class="fa fa-dropbox" aria-hidden="true"></i> Encomendas</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!"> <i class="fa fa-address-book" aria-hidden="true"></i> Contactos</a></li>
                     </ul>
-                    <form class="d-flex">
+                    <div class="d-flex">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                            <li class="nav-item border-end"><a class="nav-link active" href="#!"> <i class="fa fa-user" aria-hidden="true"></i>Eduardo Martins</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html"> <i class="fas fa-sign-out-alt"></i>Terminar Sessão</a></li>
+                        </ul>  
                         <button class="btn btn-outline-light" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">2</span>
                         </button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </nav>
