--- a/freshfarm/payment/local.html
+++ b/freshfarm/payment/local.html
@@ -26,6 +26,10 @@
                         <li class="nav-item"><a class="nav-link" href="#!"> <i class="fa fa-address-book" aria-hidden="true"></i> Contactos</a></li>
                     </ul>
                     <form class="d-flex">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                            <li class="nav-item border-end"><a class="nav-link active" href="#!"> <i class="fa fa-user" aria-hidden="true"></i>Eduardo Martins</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html"> <i class="fas fa-sign-out-alt"></i>Terminar Sessão</a></li>
+                        </ul>
                         <button class="btn btn-outline-light" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
